improve modal style

--- a/_projects/2-countify.html
+++ b/_projects/2-countify.html
@@ -11,7 +11,10 @@ technologies:
  - MySql
 ---
 <p>
-	The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end server processes push notification from Foursquare in real-time and sends updates to the Arduino board that runs the counter. Each customer is provided with a personal dashboard on the website to manage their sign.
+	The Countify product is a stylish sign that can be hung outside a business to track customer check-ins on Foursquare in real-time. It has already seen moderate success with adoption by several businesses in Ankara and even a pre-order from the co-founder of Foursquare.
+</p>
+<p>
+	The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end server processes push notification from Foursquare in real-time and sends updates to the Arduino board that runs the counter.
 </p>
 <p>
 	In the time since this initial development, the product has evolved with Foursquare to use the Swarm logo and has rebranded as Multify.
