--- a/_projects/1-markmonteiroinfo.html
+++ b/_projects/1-markmonteiroinfo.html
@@ -1,5 +1,5 @@
 ---
-title: markmonteiro.info
+title: Mark Monteiro
 id: markmonteiroinfo
 website: http://markmonteiro.info
 source: https://github.com/mark-monteiro/mark-monteiro.github.io
@@ -12,5 +12,8 @@ technologies:
   - CSS Animations
 ---
 <p>
-    This website branched off of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a>. Notable modifications include the incorporation and modification of a vertical timeline from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>, and using the collections and templating features of the Jekyll framework to abstract the rendering of each project in the portfolio section. The site is hosted using GitHub pages, which profides simple, free hosting for static websites using the Jekyll web framework.
+    This website branched off of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a> and modified appropriately. A notable modification is the incorporation and modification of a vertical timeline from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
+</p>
+<p>
+	The site is hosted using GitHub pages, which profides simple, free hosting for static websites using the Jekyll web framework. The collection and templating features of Jekyll are used to abstract the rendering of each project in the portfolio section.
 </p>
