add more details for countify project

--- a/_projects/2-countify.html
+++ b/_projects/2-countify.html
@@ -17,5 +17,8 @@ technologies:
 	The website was developed using ASP.net MVC technology and uses a custom-written OAuth2 client (<a href="https://github.com/mark-monteiro/FoursquareOAuth2Client">source</a>) to interact with the Foursquare API for authentication. Once authenticated, the back-end server processes push notification from Foursquare in real-time and sends updates to the Arduino board that runs the counter.
 </p>
 <p>
-	In the time since this initial development, the product has evolved with Foursquare to use the Swarm logo and has rebranded as Multify.
+	Once logged in to the website, clients are provided with a dashboard to manage their sign, and administrators have a dashboard to manage the clients. Administrators are also notified via email of important events such as pre-orders for the sign.
+</p>
+<p>
+	In the time since this initial development, development responsibilities have been taken over by others. The product has also evolved with Foursquare to use the Swarm logo and has rebranded as Multify.
 </p>
