--- a/index.html
+++ b/index.html
@@ -12,6 +12,11 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
     <meta name="description" content="Mark Monteiro is a software engineer and web developer recently graduated from the University of Waterloo. This is his personal resume website.">
     <meta name="author" content="Mark Monteiro">
     
+    <!-- Loading bar (http://github.hubspot.com/pace/) -->
+    <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="css/pace.css">
+
+
     <!-- Favicon/Icon stuff for each platform (http://realfavicongenerator.net) -->
     <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
     <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
