remove outdated project links

--- a/_projects/5-fashionator.html
+++ b/_projects/5-fashionator.html
@@ -1,14 +1,14 @@
 ---
 title: Fashionator
 id: fashionator
-website: http://www.innovaction.co/fashionator/
 developed: April 2014
 technologies:
  - PHP
+ - MySQL
 ---
 <p>
     The fashionator project was started to give users the ability to catalogue their clothes in order to buy and sell them, as well as recieve fashion tips from real experts. The website was developed using PHP, backed by a MySQL database.
 </p>
 <p>
-	In the end, the website was never completed and the project was abandoned in order to move on to more promising ideas. However, the site still exists in a partially functioning state.
+	In the end, the website was never completed and the project was abandoned in order to move on to more promising ideas.
 </p>
