--- a/_projects/4-innovaction.html
+++ b/_projects/4-innovaction.html
@@ -1,7 +1,6 @@
 ---
 title: Innovaction
 id: innovaction
-website: http://innovaction.co
 developed: April 2014
 technologies:
  - WordPress
@@ -9,8 +8,8 @@ technologies:
  - WordPress Plugins
 ---
 <p>
-	This is the company website for Innovaction that features information on their different projects and employees.
+	This was the company website for Innovaction, featuring information on their different projects and employees.
 </p>
 <p>
-	This is a WordPress website that was created by modifying a base theme and adding additional content. Notable changes include adding multilingual support and updating layouts and styles to suit the company.
+	This was a WordPress website, created by modifying a base theme and adding additional content. Notable changes include adding multilingual support, updating the layout to suit the company, and inserting extra content.
 </p>
