use collections for experience timeline

--- a/index.html
+++ b/index.html
@@ -209,119 +209,7 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
             <div class="cd-timeline-label">
                 <h2 class="label label-primary">Experience</h2>
             </div>
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>University Of Waterloo</h2>
-                    <h3>Bachelor of Computer Science</h3>
-                    <span class='cd-timeline-location'>Waterloo, Ontario</span>
-                    <p>Five-year program developing a solid understanding of the fundamentals of computer science and its applications. This is a co-operative education program involving six work terms as part of the degree, providing a total of two years of valuable work experience.</p>
-                    <p>
-                        <strong>Relevant Courses</strong>: Distributed Systems, Concurrent and Parallel Programming, Computer Architecture, Database Management, Algorithms, Data Structures and Data Management, Operating Systems, Object-Oriented Software Development
-                    </p>
-                    <span class="cd-date">Sept 2009 - April 2015</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Full-Stack Engineer</h2>
-                    <h3>Grand Rounds Inc.</h3>
-                    <span class='cd-timeline-location'>San Francisco, California</span>
-                    <p>
-                        Grand Rounds provides subscribers to their program with access to their netwok of top physicians from whom they can schedule an office visit or get a second opinion on a previous diagnosis. This job involved front-end and back-end work on the main company website and several internal tools. The engineering team worked under an agile-based development cycle, with a focus on test-driven development.
-                    </p>
-                    <p><strong>Technologies</strong>: Ruby On Rails, Slim, SASS, Coffeescript, Bootstrap, RSpec</p>
-                    <span class="cd-date">Sept 2014 - Dec 2014</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Web Developer</h2>
-                    <h3>Innovaction</h3>
-                    <span class='cd-timeline-location'>Ankara, Turkey</span>
-                    <p>
-                        This was a part time position working with a small startup company that was based based out of an incubator on the campus of Middle East Technical University. They had several products/projects in flight and this job involved creating websites for these products.
-                    </p>
-                    <p><strong>Projects</strong>: <a href="#countify" data-toggle="modal">Countify</a>, <a href="#innovaction" data-toggle="modal">Innovaction</a>, <a href="#fashionator" data-toggle="modal">Fashionator</a></p>
-                    <p><strong>Technologies</strong>: ASP.net MVC, OAuth2 (Foursquare API), Entity Framework, Visual Studio Online, WordPress, PHP, MySql</p>
-                    <span class="cd-date">Feb 2014 - May 2014</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Middle East Technical University</h2>
-                    <h3>Computer Engineering (Intl. Exchange)</h3>
-                    <span class='cd-timeline-location'>Ankara, Turkey</span>
-                    <p>The international exchange program allows a student to spend a number of semesters obtaining credits for their home institution in another country. METU is widely considered to be the top university in Turkey, but the experience is not only educational. There is much to learn culturally in Turkey and often while travelling to new countries you also learn more about yourself.</p>
-                    <p>
-                        <strong>Relevant Courses</strong>: Introduction to Artificial Intelligence, Computer Networks, Information Systems Management
-                    </p>
-                    <span class="cd-date">Sept 2013 - May 2014</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Web Developer</h2>
-                    <h3>Phoenix Interactive</h3>
-                    <span class='cd-timeline-location'>London, Ontario</span>
-                    <p>
-                        Oversaw the design and development of a new proof-of-concept developer portal. Worked on the project from start to finish. This included the creation of potential use-cases for the site, low-level design, implementation, documentation, and a final presentation of the completed work to company executives.
-                    </p>
-                    <p><strong>Technologies</strong>: ASP.net MVC, Entity Framework, PDF.js, Microsoft Compiled HTML Help</p>
-                    <span class="cd-date">May 2013 - Aug 2013</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Web Developer</h2>
-                    <h3>TangramCare</h3>
-                    <span class='cd-timeline-location'>Tustin, California</span>
-                    <p>
-                        Worked with a small start-up team  to design and develop a new home-healthcare application. Contributed to the development of the Android mobile application, web server and database.
-                    </p>
-                    <p><strong>Technologies</strong>: Tornado Web Server, KineticJS (HTML5 Canvas), Android App Development, MongoDB</p>
-                    <span class="cd-date">Jan 2013 - March 2013</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Software Engineer</h2>
-                    <h3>Phoenix Interactive</h3>
-                    <span class='cd-timeline-location'>London, Ontario</span>
-                    <p>
-                        Designed, coded, reviewed, tested and validated software as part of an agile development team. The software was part of back-end server software used by several major banks to manage large fleets (thousands) of ATMs. This also involved limited work in a propriatary version of C++ that ran on the ATMs themselves.
-                    </p>
-                    <p><strong>Technologies</strong>: C#, C++, Entity Framework, Unity (Dependency Injection), MKS Integrity</p>
-                    <span class="cd-date">May 2012 - Aug 2012</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
-
-            <div class="cd-timeline-block">
-                <div class="cd-timeline-point"></div>
-                <div class="cd-timeline-content">
-                    <h2>Software Support Specialist</h2>
-                    <h3>Research In Motion Ltd.</h3>
-                    <span class='cd-timeline-location'>Waterloo, Ontario</span>
-                    <p>
-                        Provided software support for several developer tools. This involved managing user permissions, answering questions, and performing administrative tasks. Created two web applications for the support team during spare time.
-                    </p>
-                    <p><strong>Technologies</strong>: PHP, Oracle Database, JIRA, Rally, Perforce</p>
-                    <span class="cd-date">Sept 2011 - Dec 2011</span>
-                </div> <!-- cd-timeline-content -->
-            </div> <!-- cd-timeline-block -->
+            {% include experience-list.html %}
         </div>
     </section> <!-- cd-timeline -->
 
