use sass variables and bourbon mixins

--- a/_projects/1-markmonteiroinfo.html
+++ b/_projects/1-markmonteiroinfo.html
@@ -9,7 +9,8 @@ technologies:
   - Github Pages
   - Bootstrap
   - Compass (SCSS)
-  - CSS Animations
+  - Bourbon
+  - CSS3 Animations
 ---
 <p>
     This website branched off of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a> and modified appropriately. A notable modification is the incorporation and modification of a vertical timeline from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
