--- a/index.html
+++ b/index.html
@@ -1,260 +1,177 @@
 ---
+layout: default
 email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20From%20%5Benter%20your%20company%20name%20here%5D
 ---
-<!DOCTYPE html>
-<html lang="en">
+<!-- Navigation -->
+<div class='nav-container'>
+  <nav class="navbar navbar-default navbar-fixed-top">
+    <div class="container">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header page-scroll">
+        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="#page-top">Mark Monteiro</a>
+      </div>
 
-<head>
-    <title>Mark Monteiro</title>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Mark Monteiro is a software engineer and web developer recently graduated from the University of Waterloo. This is his personal resume website.">
-    <meta name="author" content="Mark Monteiro">
-    
-    <!-- Loading bar (http://github.hubspot.com/pace/) -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/pace/1.0.2/pace.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="css/pace.css">
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav navbar-right">
+          <li class="hidden">
+            <a href="#page-top"></a>
+          </li>
+          <li class="page-scroll">
+            <a href="#about">About</a>
+          </li>
+          <li class="page-scroll">
+            <a href="#resume">Experience</a>
+          </li>
+          <li class="page-scroll">
+            <a href="#portfolio">Portfolio</a>
+          </li>
+          <li>
+            <a href="{{page.email_href}}" target="_blank">Contact</a>
+          </li>
+        </ul>
+      </div>
+      <!-- /.navbar-collapse -->
+    </div>
+    <!-- /.container-fluid -->
+  </nav>
+</div>
 
+<!-- Header -->
+<header>
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12">
+        <img src="img/logo.png" alt="Mark Monteiro">
+        <div class="intro-text">
+          <span class="name">Mark Monteiro</span>
+          <hr class="hidden-xs hr-light">
+          <span class="skills">Software Engineer - Web Developer</span>
+          <ul class="social">
+            <li>
+              <a href="{{page.email_href}}" class="fa-stack" target="_blank">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-envelope-o fa-stack-1x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://www.linkedin.com/in/mrkmonteiro" class="fa-stack" target="_blank">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-linkedin fa-stack-1x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://github.com/mark-monteiro" class="fa-stack" target="_blank">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-github fa-stack-1x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://stackoverflow.com/users/1988326/markuss232" class="fa-stack" target="_blank">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-stack-overflow fa-stack-1x"></i>
+              </a>
+            </li>
+            <li>
+              <a href="https://plus.google.com/+MarkMonteiroNR" class="fa-stack" target="_blank">
+                <i class="fa fa-circle-thin fa-stack-2x"></i>
+                <i class="fa fa-google-plus fa-stack-1x"></i>
+              </a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</header>
 
-    <!-- Favicon/Icon stuff for each platform (http://realfavicongenerator.net) -->
-    <link rel="apple-touch-icon" sizes="57x57" href="/apple-touch-icon-57x57.png">
-    <link rel="apple-touch-icon" sizes="60x60" href="/apple-touch-icon-60x60.png">
-    <link rel="apple-touch-icon" sizes="72x72" href="/apple-touch-icon-72x72.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="/apple-touch-icon-76x76.png">
-    <link rel="apple-touch-icon" sizes="114x114" href="/apple-touch-icon-114x114.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
-    <link rel="apple-touch-icon" sizes="144x144" href="/apple-touch-icon-144x144.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon-180x180.png">
-    <link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/favicon-194x194.png" sizes="194x194">
-    <link rel="icon" type="image/png" href="/favicon-96x96.png" sizes="96x96">
-    <link rel="icon" type="image/png" href="/android-chrome-192x192.png" sizes="192x192">
-    <link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/manifest.json">
-    <meta name="msapplication-TileColor" content="#00aba9">
-    <meta name="msapplication-TileImage" content="/mstile-144x144.png">
-    <meta name="theme-color" content="#ffffff">
-
-    <!-- Bootstrap Core CSS - Uses Bootswatch Flatly Theme: http://bootswatch.com/flatly/ -->
-    <link href="//cdn.jsdelivr.net/bootswatch/3.3.2/flatly/bootstrap.min.css" rel="stylesheet">
-
-    <!-- Custom CSS -->
-    <link href="css/site.css" rel="stylesheet">
-    <link href="css/vertical-timeline.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/fontawesome/4.3.0/css/font-awesome.min.css">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:400,700">
-    <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Lato:400,700,400italic,700italic">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-
-    <!-- Google Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-7688784-3', 'auto');
-      ga('send', 'pageview');
-    </script>
-
-</head>
-
-<body id="page-top" class="index">
-
-    <!-- Navigation -->
-    <div class='nav-container'>
-      <nav class="navbar navbar-default navbar-fixed-top">
-          <div class="container">
-              <!-- Brand and toggle get grouped for better mobile display -->
-              <div class="navbar-header page-scroll">
-                  <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-                      <span class="sr-only">Toggle navigation</span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                      <span class="icon-bar"></span>
-                  </button>
-                  <a class="navbar-brand" href="#page-top">Mark Monteiro</a>
-              </div>
-
-              <!-- Collect the nav links, forms, and other content for toggling -->
-              <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                  <ul class="nav navbar-nav navbar-right">
-                      <li class="hidden">
-                          <a href="#page-top"></a>
-                      </li>
-                      <li class="page-scroll">
-                          <a href="#about">About</a>
-                      </li>
-                      <li class="page-scroll">
-                          <a href="#resume">Experience</a>
-                      </li>
-                      <li class="page-scroll">
-                          <a href="#portfolio">Portfolio</a>
-                      </li>
-                      <li>
-                          <a href="{{page.email_href}}" target="_blank">Contact</a>
-                      </li>
-                  </ul>
-              </div>
-              <!-- /.navbar-collapse -->
+<!-- About Section -->
+<section id="about">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>About Me</h2>
+        <hr class="hr-primary">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-10 col-lg-offset-1">
+        <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked on. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}" target="_blank">drop me a line</a>!</p>
+      </div>
+    </div>
+    <div class="row info-container">
+      <div class="col-lg-6 col-lg-offset-3 info">
+        <div class="row">
+          <div class="col-xs-4 col-xs-offset-4 col-lg-4 col-lg-offset-0">
+            <img class="img-responsive" src="img/profile.png" alt="Mark Monteiro">
           </div>
-          <!-- /.container-fluid -->
-      </nav>
+          <div class="col-xs-12 col-lg-8">
+            <div class="info-labels">
+              <p>Email</p>
+              <p>Phone</p>
+              <p>Birthdate</p>
+              <p>Website</p>
+            </div>
+            <div class="info-data">
+              <p><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></p>
+              <p>226-349-3224</p>
+              <p>May 18, 1991</p>
+              <p><a href="index.html">www.markmonteiro.info</a></p>
+            </div>
+          </div>
+        </div>
+        <div class="row text-center">
+          <div class="col-lg-8 col-lg-offset-4">
+            <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
+          </div>
+        </div>
+      </div>
     </div>
+  </div>
+</section>
 
-    <!-- Header -->
-    <header>
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <img src="img/logo.png" alt="Mark Monteiro">
-                    <div class="intro-text">
-                        <span class="name">Mark Monteiro</span>
-                        <hr class="hidden-xs hr-light">
-                        <span class="skills">Software Engineer - Web Developer</span>
-                        <ul class="social">
-                            <li>
-                                <a href="{{page.email_href}}" class="fa-stack" target="_blank">
-                                    <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                    <i class="fa fa-envelope-o fa-stack-1x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://www.linkedin.com/in/mrkmonteiro" class="fa-stack" target="_blank">
-                                    <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                    <i class="fa fa-linkedin fa-stack-1x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://github.com/mark-monteiro" class="fa-stack" target="_blank">
-                                    <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                    <i class="fa fa-github fa-stack-1x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://stackoverflow.com/users/1988326/markuss232" class="fa-stack" target="_blank">
-                                    <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                    <i class="fa fa-stack-overflow fa-stack-1x"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="https://plus.google.com/+MarkMonteiroNR" class="fa-stack" target="_blank">
-                                    <i class="fa fa-circle-thin fa-stack-2x"></i>
-                                    <i class="fa fa-google-plus fa-stack-1x"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>About Me</h2>
-                    <hr class="hr-primary">
-                </div>
-            </div>
-            <div class="row">
-                <div class="col-lg-10 col-lg-offset-1">
-                    <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked on. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}" target="_blank">drop me a line</a>!</p>
-                </div>
-            </div>
-            <div class="row info-container">
-                <div class="col-lg-6 col-lg-offset-3 info">
-                    <div class="row">
-                        <div class="col-xs-4 col-xs-offset-4 col-lg-4 col-lg-offset-0">
-                            <img class="img-responsive" src="img/profile.png" alt="Mark Monteiro">
-                        </div>
-                        <div class="col-xs-12 col-lg-8">
-                            <div class="info-labels">
-                                <p>Email</p>
-                                <p>Phone</p>
-                                <p>Birthdate</p>
-                                <p>Website</p>
-                            </div>
-                            <div class="info-data">
-                                <p><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></p>
-                                <p>226-349-3224</p>
-                                <p>May 18, 1991</p>
-                                <p><a href="index.html">www.markmonteiro.info</a></p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row text-center">
-                        <div class="col-lg-8 col-lg-offset-4">
-                            <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section>
-
-    <!-- Resume Section -->
-    <section id="resume" class="success">
-        <div class="cd-container">
-            <div class="cd-timeline-label">
-                <h2 class="label label-primary">Experience</h2>
-            </div>
-            {% include experience-list.html %}
-        </div>
-    </section> <!-- cd-timeline -->
-
-    <!-- Portfolio Grid Section -->
-    <section id="portfolio">
-        <div class="container">
-            <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2>Projects</h2>
-                    <hr class="hr-primary">
-                </div>
-            </div>
-            <div class="row">
-                {% include portfolio-items.html %}
-            </div>
-        </div>
-    </section>
-
-    <!-- Portfolio Modals -->
-    {% include portfolio-modals.html %}
-
-    <!-- Footer -->
-    <footer class="text-center">
-        Copyright &copy; Mark Monteiro 2015
-    </footer>
-
-    <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
-    <div class="scroll-top page-scroll visible-xs visible-sm">
-        <a class="btn btn-primary" href="#page-top">
-            <i class="fa fa-chevron-up"></i>
-        </a>
+<!-- Resume Section -->
+<section id="resume" class="success">
+  <div class="cd-container">
+    <div class="cd-timeline-label">
+      <h2 class="label label-primary">Experience</h2>
     </div>
+    {% include experience-list.html %}
+  </div>
+</section> <!-- cd-timeline -->
 
-    <!-- Libraries -->
-    <script type="text/javascript" src="//cdn.jsdelivr.net/jquery/2.1.4/jquery.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/bootstrap/3.3.4/js/bootstrap.min.js"></script>
-    <script type="text/javascript" src="//cdn.jsdelivr.net/modernizr/2.8.3/modernizr.min.js"></script>
-    <script type="text/javascript" src="js/vertical-timeline.js"></script>
-    <script type="text/javascript" src="js/cbpAnimatedHeader.js"></script>
+<!-- Portfolio Grid Section -->
+<section id="portfolio">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-12 text-center">
+        <h2>Projects</h2>
+        <hr class="hr-primary">
+      </div>
+    </div>
+    <div class="row">
+      {% include portfolio-items.html %}
+    </div>
+  </div>
+</section>
 
-    <!-- Custom Theme JavaScript -->
-    <script type="text/javascript" src="js/freelancer.js"></script>
+<!-- Portfolio Modals -->
+{% include portfolio-modals.html %}
 
-</body>
+<!-- Footer -->
+<footer class="text-center">
+  Copyright &copy; Mark Monteiro 2015
+</footer>
 
-</html>
+<!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
+<div class="scroll-top page-scroll visible-xs visible-sm">
+  <a class="btn btn-primary" href="#page-top">
+    <i class="fa fa-chevron-up"></i>
+  </a>
+</div>
