--- a/index.html
+++ b/index.html
@@ -108,28 +108,24 @@ email_href: mailto:mark.monteiro23@gmail.com?subject=Awesome%20Job%20Offer%20Fro
     <div class="row info-container">
       <div class="col-lg-6 col-lg-offset-3 info">
         <div class="row">
-          <div class="col-xs-4 col-xs-offset-4 col-lg-4 col-lg-offset-0">
+          <div class="col-xs-4 col-xs-offset-4 col-lg-4 col-lg-offset-0 col-vcenter">
             <img class="img-responsive" src="img/profile.png" alt="Mark Monteiro">
-          </div>
-          <div class="col-xs-12 col-lg-8">
-            <div class="info-labels">
-              <p>Email</p>
-              <p>Phone</p>
-              <p>Birthdate</p>
-              <p>Website</p>
-            </div>
-            <div class="info-data">
-              <p><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></p>
-              <p>226-349-3224</p>
-              <p>May 18, 1991</p>
-              <p><a href="index.html">www.markmonteiro.info</a></p>
-            </div>
+          </div><!--
+          --><div class="col-xs-12 col-lg-8 col-vcenter">
+            <dl class="dl-horizontal" >
+              <dt>Email</dt>
+              <dd><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></dd>
+              <dt>Phone</dt>
+              <dd>226-349-3224</dd>
+              <dt>Birthdate</dt>
+              <dd>May 18, 1991</dd>
+              <dt>Website</dt>
+              <dd><a href="index.html">www.markmonteiro.info</a></dd>
+            </dl>
           </div>
         </div>
-        <div class="row text-center">
-          <div class="col-lg-8 col-lg-offset-4">
-            <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
-          </div>
+        <div class="text-center">
+          <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
         </div>
       </div>
     </div>
