--- a/_experiences/01_sandbox_software.html
+++ b/_experiences/01_sandbox_software.html
@@ -11,9 +11,14 @@ technologies:
  - Windows Presentation Foundation (WPF)
  - Windows Communication Foundation (WCF)
  - <a href='http://www.oasiscms.com/' target='_blank'>Oasis CMS</a>
+ - Wordpress
+ - Drupal
 ---
 <p>
-    Sandbox Software Solutions provides development services for custom software solutions, web portals/intranets, content managed website development, and mobile app development.
+    <a href='https://www.sandboxsoftware.ca/' target='_blank'>Sandbox Software Solutions</a> provides development services for custom software solutions, web portals/intranets, content managed website development, and mobile app development.
+</p>
+<p>
+    Many sites are created in Sandbox's propritary <a href='http://www.oasiscms.com/' target='_blank'>Oasis Content Management System</a>, which is developed using Java, Hybernate and Velocity Templating. Other websites and projects have been developed using C# (ASP, WPF), PHP (Laravel) Wordpress or Drupal, depending on client requirements.
 </p>
 <p>
     <strong>Projects</strong>:
