add field to order projects

--- a/_projects/smokesletsgo.html
+++ b/_projects/smokesletsgo.html
@@ -1,5 +1,6 @@
 ---
 title: Smokes, Let's Go
+order: 3
 website: http://smokesletsgo.com
 source: https://github.com/mark-monteiro/SmokesLetsGo/
 developed: August 2014
