--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -1,5 +1,6 @@
 ---
 title: Mark Monteiro
+order: 1
 website: http://markmonteiro.info
 source: https://github.com/mark-monteiro/mark-monteiro.github.io
 developed: April 2015
