fix travis CI build

--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -1,7 +1,7 @@
 ---
 title: Mark Monteiro
 order: 1
-website: http://markmonteiro.info
+website: http://markmonteiro.info/
 source: https://github.com/mark-monteiro/mark-monteiro.github.io
 developed: April 2015
 technologies:
