add links to external project websites in resume

--- a/_experiences/01_sandbox_software.html
+++ b/_experiences/01_sandbox_software.html
@@ -3,6 +3,15 @@ title: Web Developer
 company: Sandbox Software Solutions
 location: Guelph, Ontario
 dates: Sept 2015 - Present
+external_projects:
+    - name: Toronto Community Housing 2015 Annual Report
+      url: annualreport.torontohousing.ca
+    - name: Sandbox Software Solutions
+      url: sandboxsoftware.ca
+    - name: CanVECTOR
+      url: canvector.ca
+    - name: EBS Geostructural
+      url: ebsgeo.com
 technologies:
  - ASP.net MVC
  - ASP.net Web Pages
@@ -15,13 +24,8 @@ technologies:
  - Drupal
 ---
 <p>
-    <a href='https://www.sandboxsoftware.ca/' target='_blank'>Sandbox Software Solutions</a> provides development services for custom software solutions, web portals/intranets, content managed website development, and mobile app development.
+    <a href='https://www.sandboxsoftware.ca/' target='_blank'>Sandbox Software Solutions</a> foo bar provides development services for custom software solutions, web portals/intranets, content managed website development, and mobile app development.
 </p>
 <p>
     Many sites are created in Sandbox's propritary <a href='http://www.oasiscms.com/' target='_blank'>Oasis Content Management System</a>, which is developed using Java, Hybernate and Velocity Templating. Other websites and projects have been developed using C# (ASP, WPF), PHP (Laravel) Wordpress or Drupal, depending on client requirements.
-</p>
-<p>
-    <strong>Projects</strong>:
-    <a href='https://www.canvector.ca/' target="_blank">canvector.ca</a>,
-    <a href='http://sandbox.dev.oasiscms.com/' target="_blank">sandboxsoftware.ca</a>
 </p>
