update responsive styling

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@ custom_js:
     <div class="row info-container">
       <div class="col-lg-6 col-lg-offset-3 info">
         <div class="row">
-          <div class="col-xs-4 col-xs-offset-4 col-lg-4 col-lg-offset-0 col-vcenter">
-            <img class="img-responsive" src="img/profile.png" alt="Mark Monteiro">
-          </div><!--
-          --><div class="col-xs-12 col-lg-8 col-vcenter">
+          <div class="col-xs-12 col-lg-4 col-lg-offset-0">
+            <img class="portrait img-responsive" src="img/profile.png" alt="Mark Monteiro">
+          </div>
+          <div class="col-xs-12 col-lg-8">
             <dl class="dl-horizontal" >
               <dt>Email</dt>
               <dd><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></dd>
