add WHAI website to resume

--- a/_experiences/01_sandbox_software.html
+++ b/_experiences/01_sandbox_software.html
@@ -8,6 +8,8 @@ external_projects:
       url: annualreport.torontohousing.ca
     - name: Sandbox Software Solutions
       url: sandboxsoftware.ca
+    - name: Women &amp; HIV/AIDS Initiative (WHAI)
+      url: www.whai.ca
     - name: CanVECTOR
       url: canvector.ca
     - name: EBS Geostructural
