update link to Countify website

--- a/_projects/countify.html
+++ b/_projects/countify.html
@@ -1,7 +1,7 @@
 ---
 title: Countify
 order: 2
-website: http://multify.co
+website: https://twitter.com/multifyco
 developed: April 2014
 technologies:
  - C#
