--- a/index.html
+++ b/index.html
@@ -19,33 +19,33 @@ custom_js:
           <span class="skills">Software Engineer - Web Developer</span>
           <ul class="social">
             <li>
-              <a href="{{page.email_href}}" class="fa-stack" target="_blank">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-envelope-o fa-stack-1x"></i>
+              <a href="{{page.email_href}}" target="_blank">
+                <span class="fa fa-envelope-o"></span>
+                <span class='sr-only'>Email</span>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mrkmonteiro" class="fa-stack" target="_blank">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-linkedin fa-stack-1x"></i>
+              <a href="https://www.linkedin.com/in/mrkmonteiro" target="_blank">
+                <span class="fa fa-linkedin"></span>
+                <span class='sr-only'>LinkedIn</span>
               </a>
             </li>
             <li>
-              <a href="https://github.com/mark-monteiro" class="fa-stack" target="_blank">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-github fa-stack-1x"></i>
+              <a href="https://github.com/mark-monteiro" target="_blank">
+                <span class="fa fa-github"></span>
+                <span class='sr-only'>Github</span>
               </a>
             </li>
             <li>
-              <a href="https://stackoverflow.com/users/1988326/markuss232" class="fa-stack" target="_blank">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-stack-overflow fa-stack-1x"></i>
+              <a href="https://stackoverflow.com/users/1988326/markuss232" target="_blank">
+                <span class="fa fa-stack-overflow"></span>
+                <span class='sr-only'>Stack Overflow</span>
               </a>
             </li>
             <li>
-              <a href="https://plus.google.com/+MarkMonteiroNR" class="fa-stack" target="_blank">
-                <i class="fa fa-circle-thin fa-stack-2x"></i>
-                <i class="fa fa-google-plus fa-stack-1x"></i>
+              <a href="https://plus.google.com/+MarkMonteiroNR" target="_blank">
+                <span class="fa fa-google-plus"></span>
+                <span class='sr-only'>Google+</span>
               </a>
             </li>
           </ul>
