--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ custom_js:
       <div class="col-lg-12">
         <img src="img/logo.png" alt="Mark Monteiro">
         <div class="intro-text">
-          <span class="name">Mark Monteiro</span>
+          <h1 class="name">Mark Monteiro</h1>
           <hr class="hidden-xs hr-light">
           <span class="skills">Software Engineer - Web Developer</span>
           <ul class="social">
@@ -89,7 +89,10 @@ custom_js:
           </div>
         </div>
         <div class="text-center">
-          <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download><i class="fa fa-download"></i>Download Resume</a>
+          <a class="btn btn-primary" href="/mark-monteiro-resume.pdf" download>
+            <span class="fa fa-download"></span>
+            Download Resume
+          </a>
         </div>
       </div>
     </div>
@@ -127,6 +130,7 @@ custom_js:
 <!-- Scroll to Top Button (Only visible on small and extra-small screen sizes) -->
 <div class="scroll-top page-scroll visible-xs visible-sm">
   <a class="btn btn-primary" href="#page-top">
-    <i class="fa fa-chevron-up"></i>
+    <span class="fa fa-chevron-up"></span>
+    <span class='sr-only'>Scroll To Top Of Page</span>
   </a>
 </div>
