--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -2,7 +2,7 @@
 title: Web Developer
 company: Sandbox Software Solutions
 location: Guelph, Ontario
-dates: Sept 2015 - Present
+dates: Sept 2015 - Aug 2016
 external_projects:
     - name: Toronto Community Housing 2015 Annual Report
       url: annualreport.torontohousing.ca
