--- a/_experiences/11_sandbox_software.html
+++ b/_experiences/11_sandbox_software.html
@@ -3,9 +3,8 @@ title: Project Lead
 company: Sandbox Software Solutions
 location: Guelph, Ontario
 dates: Aug 2016 - May 2017
-external_projects:
-    - name: Value Connect
-      url: valueconnect.ca
+projects:
+- valueconnect
 technologies:
  - Java
  - Spring
@@ -18,12 +17,14 @@ technologies:
  - AngularJS Material
  - Gulp.js
  - Gradle
+ - Beanstream
+ - Google Maps API (Static Maps, Distance Matrix, Geocoding)
  - BitBucket
  - JIRA
  - Jenkins
 ---
 <p>
-    <a href='https://www.valueconnect.ca/' target='_blank'>Value Connect</a> is a property appraisal management company, using technology to facilitate speedy turnaround times and advanced, consistent reports.
+    <a href='https://www.valueconnect.ca/' target='_blank'>Value Connect</a> is a property appraisal management company, harnessing technology to facilitate speedy turnaround times and build advanced, consistent reports.
 </p>
 <p>
     As team lead on this project, resposibilities included: software development and testing; top-level architectural design; managing a JIRA project to track work (creating and updating cases, organizing the backlog, planning sprints, etc.); dev-ops work to deploy and maintain multiple production and testing environments; development of documentation for future developers; and client interaction to develop additional requirements for the product.
