add font awesome icons to timeline points

--- a/_experiences/01_rim.html
+++ b/_experiences/01_rim.html
@@ -3,6 +3,7 @@ title: Software Support Specialist
 company: Research In Motion Ltd.
 location: Waterloo, Ontario
 dates: Sept 2011 - Dec 2011
+category: work
 technologies:
  - PHP
  - Oracle Database
