--- a/_experiences/03_tangramcare.html
+++ b/_experiences/03_tangramcare.html
@@ -3,6 +3,7 @@ title: Web Developer
 company: TangramCare
 location: Tustin, California
 dates: Jan 2013 - March 2013
+category: work
 technologies:
  - Tornado Web Server
  - KineticJS (HTML5 Canvas)
