--- a/_experiences/04_phoenix_interactive.html
+++ b/_experiences/04_phoenix_interactive.html
@@ -3,6 +3,7 @@ title: Web Developer
 company: Phoenix Interactive
 location: London, Ontario
 dates: May 2013 - Aug 2013
+category: work
 technologies:
  - ASP.net MVC
  - Entity Framework
