--- a/_experiences/06_innovaction.html
+++ b/_experiences/06_innovaction.html
@@ -3,6 +3,7 @@ title: Web Developer
 company: Innovaction
 location: Ankara, Turkey
 dates: Feb 2014 - May 2014
+category: work
 technologies:
  - ASP.net MVC
  - OAuth2 (Foursquare API)
