--- a/_experiences/07_grand_rounds.html
+++ b/_experiences/07_grand_rounds.html
@@ -3,6 +3,7 @@ title: Full-Stack Engineer
 company: Grand Rounds
 location: San Francisco, California
 dates: Sept 2014 - Dec 2014
+category: work
 technologies:
  - Ruby On Rails
  - Slim
