--- a/_experiences/08_renoworks.html
+++ b/_experiences/08_renoworks.html
@@ -3,6 +3,7 @@ title: SketchUp Plugin Developer
 company: Renoworks
 location: Guelph, Ontario
 dates: July 2015 - August 2015
+category: work
 technologies:
  - SketchUp API
  - Ruby
