--- a/_experiences/11_sandbox_software.html
+++ b/_experiences/11_sandbox_software.html
@@ -3,6 +3,7 @@ title: Project Lead
 company: Sandbox Software Solutions
 location: Guelph, Ontario
 dates: Aug 2016 - May 2017
+category: work
 projects:
 - valueconnect
 technologies:
