--- a/_experiences/02_phoenix_interactive.html
+++ b/_experiences/02_phoenix_interactive.html
@@ -3,6 +3,7 @@ title: Software Engineer
 company: Phoenix Interactive
 location: London, Ontario
 dates: May 2012 - Aug 2012
+category: work
 technologies:
  - C#
  - C++
