--- a/_experiences/05_metu.html
+++ b/_experiences/05_metu.html
@@ -3,6 +3,7 @@ title: Computer Engineering (Intl. Exchange)
 company: Middle East Technical University
 location: Ankara, Turkey
 dates: Sept 2013 - May 2014
+category: school
 ---
 <p>The international exchange program allows a student to spend a number of semesters obtaining credits for their home institution in another country. METU is widely considered to be the top university in Turkey, but the experience is not only educational. There is much to learn culturally in Turkey and often while travelling to new countries you also learn more about yourself.</p>
 <p>
