--- a/_experiences/09_university_of_waterloo.html
+++ b/_experiences/09_university_of_waterloo.html
@@ -3,6 +3,7 @@ title: Bachelor of Computer Science
 company: University of Waterloo
 location: Waterloo, Ontario
 dates: Sept 2009 - April 2015
+category: school
 ---
 <p>
 	Five-year program developing a solid understanding of the fundamentals of computer science and its applications. This is a co-operative education program involving six work terms as part of the degree, providing a total of two years of valuable work experience.
