--- a/_experiences/10_sandbox_software.html
+++ b/_experiences/10_sandbox_software.html
@@ -3,6 +3,7 @@ title: Web Developer
 company: Sandbox Software Solutions
 location: Guelph, Ontario
 dates: Sept 2015 - Aug 2016
+category: work
 external_projects:
     - name: Toronto Community Housing 2015 Annual Report
       url: tch.dev.oasiscms.com
