convert tabs to spaces

--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -15,8 +15,11 @@ technologies:
   - Code Climate
 ---
 <p>
-    This website branched off of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a> and modified appropriately. A notable modification is the incorporation and modification of a vertical timeline from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
+  This website branched off of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a>
+  and modified appropriately. A notable modification is the incorporation and modification of a vertical timeline
+  from <a href="http://codyhouse.co/gem/vertical-timeline/">codyhouse.co</a>.
 </p>
 <p>
-	The site is hosted using GitHub pages, which profides simple, free hosting for static websites using the Jekyll web framework. The collection and templating features of Jekyll are used to abstract the rendering of each project in the portfolio section.
+  The site is hosted using GitHub pages, which profides simple, free hosting for static websites using the Jekyll web framework.
+  The collection and templating features of Jekyll are used to abstract the rendering of each project in the portfolio section.
 </p>
