--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ custom_js:
     <div class="cd-timeline-label">
       <h2 class="label label-primary">Experience</h2>
     </div>
-    {% include experience-list.html %}
+    {% include experience-timeline.html %}
   </div>
 </section> <!-- cd-timeline -->
 
