Remove all target="_blank" links from site

--- a/_experiences/07_grand_rounds.html
+++ b/_experiences/07_grand_rounds.html
@@ -13,5 +13,5 @@ technologies:
  - RSpec
 ---
 <p>
-    <a href='https://www.grandrounds.com/' target='_blank'>Grand Rounds</a> provides subscribers to their program with access to their netwok of top physicians from whom they can schedule an office visit or get a second opinion on a previous diagnosis. This job involved front-end and back-end work on the main company website and several internal tools. The engineering team worked under an agile-based development cycle, with a focus on test-driven development.
+    <a href='https://www.grandrounds.com/'>Grand Rounds</a> provides subscribers to their program with access to their netwok of top physicians from whom they can schedule an office visit or get a second opinion on a previous diagnosis. This job involved front-end and back-end work on the main company website and several internal tools. The engineering team worked under an agile-based development cycle, with a focus on test-driven development.
 </p>
