--- a/_experiences/11_sandbox_software.html
+++ b/_experiences/11_sandbox_software.html
@@ -25,7 +25,7 @@ technologies:
  - Jenkins
 ---
 <p>
-    <a href='https://www.valueconnect.ca/' target='_blank'>Value Connect</a> is a property appraisal management company, harnessing technology to facilitate speedy turnaround times and build advanced, consistent reports.
+    <a href='https://www.valueconnect.ca/'>Value Connect</a> is a property appraisal management company, harnessing technology to facilitate speedy turnaround times and build advanced, consistent reports.
 </p>
 <p>
     As team lead on this project, resposibilities included: software development and testing; top-level architectural design; managing a JIRA project to track work (creating and updating cases, organizing the backlog, planning sprints, etc.); dev-ops work to deploy and maintain multiple production and testing environments; development of documentation for future developers; and client interaction to develop additional requirements for the product.
