--- a/index.html
+++ b/index.html
@@ -19,31 +19,31 @@ custom_js:
           <span class="skills">Software Engineer - Web Developer</span>
           <ul class="social">
             <li>
-              <a href="{{page.email_href}}" target="_blank">
+              <a href="{{page.email_href}}">
                 <span class="fa fa-envelope-o"></span>
                 <span class='sr-only'>Email</span>
               </a>
             </li>
             <li>
-              <a href="https://www.linkedin.com/in/mrkmonteiro" target="_blank">
+              <a href="https://www.linkedin.com/in/mrkmonteiro">
                 <span class="fa fa-linkedin"></span>
                 <span class='sr-only'>LinkedIn</span>
               </a>
             </li>
             <li>
-              <a href="https://github.com/mark-monteiro" target="_blank">
+              <a href="https://github.com/mark-monteiro">
                 <span class="fa fa-github"></span>
                 <span class='sr-only'>Github</span>
               </a>
             </li>
             <li>
-              <a href="https://stackoverflow.com/users/1988326/markuss232" target="_blank">
+              <a href="https://stackoverflow.com/users/1988326/markuss232">
                 <span class="fa fa-stack-overflow"></span>
                 <span class='sr-only'>Stack Overflow</span>
               </a>
             </li>
             <li>
-              <a href="https://plus.google.com/+MarkMonteiroNR" target="_blank">
+              <a href="https://plus.google.com/+MarkMonteiroNR">
                 <span class="fa fa-google-plus"></span>
                 <span class='sr-only'>Google+</span>
               </a>
@@ -66,7 +66,7 @@ custom_js:
     </div>
     <div class="row">
       <div class="col-lg-10 col-lg-offset-1">
-        <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked on. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}" target="_blank">drop me a line</a>!</p>
+        <p>Welcome to my homepage! Here you can see a summary of my education, experiences, and projects I have worked on. If you like what you see, or just want some more information about myself, please <a href="{{page.email_href}}">drop me a line</a>!</p>
       </div>
     </div>
     <div class="row info-container">
@@ -78,7 +78,7 @@ custom_js:
           <div class="col-xs-12 col-lg-8">
             <dl class="dl-horizontal" >
               <dt>Email</dt>
-              <dd><a href="{{page.email_href}}" target="_blank">mark.monteiro23@gmail.com</a></dd>
+              <dd><a href="{{page.email_href}}">mark.monteiro23@gmail.com</a></dd>
               <dt>Phone</dt>
               <dd>226-349-3224</dd>
               <dt>Birthdate</dt>
