Remove remaining links with target='_blank'

--- a/_projects/valueconnect.html
+++ b/_projects/valueconnect.html
@@ -22,11 +22,11 @@ technologies:
  - Jenkins
 ---
 <p>
-    <a href='https://www.valueconnect.ca/' target='_blank'>Value Connect</a> is a property appraisal management company, harnessing technology
+    <a href='https://www.valueconnect.ca/'>Value Connect</a> is a property appraisal management company, harnessing technology
     to facilitate speedy turnaround times and build advanced, consistent reports.
 </p>
 <p>
-    The project was generated and scaffolded using the <a href='https://jhipster.github.io/' target='_blank'>JHipster</a> Yeoman generator.
+    The project was generated and scaffolded using the <a href='https://jhipster.github.io/'>JHipster</a> Yeoman generator.
     The technology stack includes a back-end JSON API created with Java and Spring, and a front-end single page website written in AngularJS.
 </p>
 <p>
@@ -36,7 +36,7 @@ technologies:
     <li>
         Reports are built with a custom form-builder solution that supports partial completion. A custom
         server-side validation solution is also used and integrates with
-        <a href='https://material.angularjs.org/latest/demo/input' target='_blank'>Angular Material</a> to dynamically display validation
+        <a href='https://material.angularjs.org/latest/demo/input'>Angular Material</a> to dynamically display validation
         errors in the front-end. All submissions are versioned and each version can be viewed or reverted to at any time.
     </li>
     <li>
@@ -61,6 +61,6 @@ technologies:
         automatically generate maps that are used in the final report.
     </li>
     <li>
-        Multiple languages are supported using <a href='https://angular-translate.github.io/' target='_blank'>Angular Translate</a>.
+        Multiple languages are supported using <a href='https://angular-translate.github.io/'>Angular Translate</a>.
     </li>
 </ul>
