Add support for StackShare embeds in project modals

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@ custom_css:
   - index.css
 custom_js:
   - vertical-timeline.js
+  - portfolio-modals.js
 ---
 <!-- Header -->
 <header class='page-banner'>
