Add StackShare embed for markmonteiro.info project

--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -4,15 +4,7 @@ order: 2
 website: http://markmonteiro.info
 source: https://github.com/mark-monteiro/mark-monteiro.github.io
 developed: April 2015
-technologies:
-  - Jekyll
-  - Github Pages
-  - Bootstrap
-  - Compass (SCSS)
-  - Bourbon
-  - CSS3 Animations
-  - Travis CI
-  - Code Climate
+stackshareId: e033102511720d845cb4f272adf1d0
 ---
 <p>
   This website branched off of a free base theme from <a href="http://startbootstrap.com/template-overviews/freelancer/">startbootstrap.com</a>
