Rename all references to repository

--- a/_projects/markmonteiroinfo.html
+++ b/_projects/markmonteiroinfo.html
@@ -2,7 +2,7 @@
 title: Mark Monteiro
 order: 2
 website: http://markmonteiro.info
-source: https://github.com/mark-monteiro/mark-monteiro.github.io
+source: https://github.com/mark-monteiro/markmonteiro.info
 developed: April 2015
 technologies:
   - Jekyll
