Fix content errors

--- a/_experiences/13_tarion.html
+++ b/_experiences/13_tarion.html
@@ -11,7 +11,7 @@ technologies:
  - Spring
  - TypeScript
  - Angular v5
- - Oracle Weblogic
+ - Oracle WebLogic
  - webpack
  - Maven
  - JAX-WS/SOAP
@@ -43,12 +43,12 @@ technologies:
     integrates with several other internal web services.
 </p>
 <p>
-    As the lead developer on this project, resposibilities included:
+    As the lead developer on this project, responsibilities included:
 </p>
 <ul>
     <li>Top-level architectural design</li>
     <li>Software development and testing</li>
-    <li>Coordination and code review of work from other prject developers</li>
+    <li>Coordination and code review of work from other project developers</li>
     <li>Dev-ops work to deploy to and maintain multiple production and testing environments</li>
     <li>Development of automated unit tests, integrated with the CI build process</li>
     <li>Managing a JIRA project to track work (keeping tickets up to date)</li>
