--- a/_projects/dbno.html
+++ b/_projects/dbno.html
@@ -18,7 +18,7 @@ technologies:
 </p>
 <p>
     This project was a special challenge because it was necessary to include as many accessibility features as possible
-    so that it could be navigated and used by users with various visual and auditory impairements. Accessibility 
+    so that it could be navigated and used by users with various visual and auditory impairments. Accessibility 
     features include:
 </p>
 <ul>
@@ -40,7 +40,7 @@ technologies:
     </li>
 </ul>
 <p>
-    The site was tested extensibly features were tested using screenreaders on the site during development, and also tested by users with
-    visual and auditory impairments with success.
+    The site was tested extensively using screen readers during development, and also tested successfully by users with
+    visual and auditory impairments before launch.
 </p>
     
