--- a/_experiences/12_dbno.html
+++ b/_experiences/12_dbno.html
@@ -24,13 +24,13 @@ technologies:
 </p>
 <p>
     This project was a special challenge because it was necessary to include as many accessibility features as possible
-    so that it could be navigated and used by users with various visual and auditory impairements. This was done with a
+    so that it could be navigated and used by users with various visual and auditory impairments. This was done with a
     React-based application to provide a fast, fluid, and dynamic interface, without compromising accessibility. Before
     launch, the site was demoed with several test groups with visual and auditory impairments and was received well.
 </p>
 <p>
     As a development lead on this project, responsibilities included: software development and testing; top-level
-    architectural design; managing a JIRA project to track work (creating and updating cases, organizing the backlog,
+    architectural design; managing a Jira project to track work (creating and updating cases, organizing the backlog,
     planning sprints, etc.); dev-ops work to deploy and maintain multiple production and testing environments;
     development of documentation for future developers; and client interaction to develop additional requirements for
     the product.
