Add words to workspace dictionary and fix spelling mistakes

--- a/_experiences/02_phoenix_interactive.html
+++ b/_experiences/02_phoenix_interactive.html
@@ -12,5 +12,5 @@ technologies:
  - MKS Integrity
 ---
 <p>
-    Designed, coded, reviewed, tested and validated software as part of an agile development team. The software was part of back-end server software used by several major banks to manage large fleets (thousands) of ATMs. This also involved limited work in a propriatary version of C++ that ran on the ATMs themselves.
+    Designed, coded, reviewed, tested and validated software as part of an agile development team. The software was part of back-end server software used by several major banks to manage large fleets (thousands) of ATMs. This also involved limited work in a proprietary version of C++ that ran on the ATMs themselves.
 </p>
