--- a/_projects/valueconnect.html
+++ b/_projects/valueconnect.html
@@ -49,7 +49,7 @@ technologies:
     </li>
     <li>
         Google Maps <a href='https://developers.google.com/maps/documentation/geocoding/intro' target='blank'>Geocoding API</a> is used to
-        automatically locate and verify user submitted addresses. It is also used to auto-populate city, provice and postal code fields on
+        automatically locate and verify user submitted addresses. It is also used to auto-populate city, province and postal code fields on
         user forms.
     </li>
     <li>
